cabal-version:       2.4

name:                naperian-ffi
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Paszke
maintainer:          adam.paszke@gmail.com
-- copyright:
-- category:

library
  exposed-modules:     Naperian
  other-extensions:    DataKinds
                     , TypeFamilies
                     , TypeOperators
                     , GADTs
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , UndecidableInstances
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

